# presale-dashboard

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  launch.bat  pyproject.toml
docs/superpowers/plans/: 2026-06-05-presale-dashboard.md
docs/superpowers/specs/: 2026-06-05-presale-dashboard-design.md
src/: config.py  export.py  main.py  metrics.py  models.py  parsing.py  storage.py
static/: app.js  index.html  style.css
tests/e2e/: test_dashboard.py
tests/fixtures/: znacheniya_expected_v1.xlsx
tests/unit/: test_api.py  test_export.py  test_golden.py  test_metrics.py  test_parsing.py  test_storage.py
